# neoai_kensyu

./: makefile  pyproject.toml  scrapy.py  test.py
flagged/: log.csv
