[tool.poetry]
name = "neoai-kensyu"
version = "0.1.0"
description = ""
authors = ["murataryusei <r.murata424@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.30.1"
gradio = "^4.31.4"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
